--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
 <div id="main">
-<!--react stays bellow-->
-    <div id="nav-bar"></div>
-    <div id="app"></div>
+    <div id="app">
+        <!--react stays here-->
+    </div>
 </div>
 <script src="{% static 'frontend/main.js' %}"></script>
 </body>
