Finishing AlocacaoChart with dynamic colors and data

--- a/frontend/src/scss/volt/_variables.scss
+++ b/frontend/src/scss/volt/_variables.scss
@@ -73,6 +73,7 @@ $primary:       #262B40;
 $secondary:     #61DAFB;
 $tertiary:      #1B998B;
 $quaternary:    #C96480;
+$quaternary:    #C96480;
 
 // Series names and colors. This can be extended or customized as desired. Just add more series and colors.
 $ct-series-names: (a, b, c, d, e, f, g) !default;
@@ -82,7 +83,7 @@ $ct-series-colors: (
   #262B40,
   #f5b759,
   #C96480,
-  #ffffff,
+  #8965e0,
   #17a5ce,
 
 );
