Refactoring frontend folder

--- a/frontend/src/scss/volt/_variables.scss
+++ b/frontend/src/scss/volt/_variables.scss
@@ -694,7 +694,7 @@ $table-variants: (
 // scss-docs-end table-variables
 
 
-// Buttons + Forms
+// Buttons + forms
 //
 // Shared variables that are reassigned to `$input-` and `$btn-` specific variables.
 
@@ -765,7 +765,7 @@ $btn-border-radius-lg:        $border-radius-lg;
 $btn-transition:              color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 
 
-// Forms
+// forms
 
 $form-text-margin-top:                  .25rem;
 $form-text-font-size:                   $small-font-size;
